--- a/mod.yml
+++ b/mod.yml
@@ -3,190 +3,30 @@ originalAuthor: You
 description: Generated on Sun, 18 May 2025 11:52:15 GMT
 dependencies: 
 assets:
-# - name: remastered/al01.ard/SP_al01_ard0.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al01.ard/SP_al01_ard0.evdl
-# - name: remastered/al01.ard/SP_al01_ard19.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al01.ard/SP_al01_ard19.evdl
-# - name: remastered/al01.ard/SP_al01_ard3.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al01.ard/SP_al01_ard3.evdl
-# - name: remastered/al01.ard/SP_al01_ard3e8.binl
-#   method: copy
-#   source:
-#   - name: remastered/al01.ard/SP_al01_ard3e8.binl
-# - name: remastered/al01.ard/SP_al01_ard3eb.binl
-#   method: copy
-#   source:
-#   - name: remastered/al01.ard/SP_al01_ard3eb.binl
-# - name: remastered/al01.ard/SP_al01_ard3ec.binl
-#   method: copy
-#   source:
-#   - name: remastered/al01.ard/SP_al01_ard3ec.binl
-# - name: remastered/al01.ard/SP_al01_ard3ed.binl
-#   method: copy
-#   source:
-#   - name: remastered/al01.ard/SP_al01_ard3ed.binl
-# - name: remastered/al01.ard/SP_al01_ard3f4.binl
-#   method: copy
-#   source:
-#   - name: remastered/al01.ard/SP_al01_ard3f4.binl
-# - name: remastered/al01.ard/SP_al01_ard3f5.binl
-#   method: copy
-#   source:
-#   - name: remastered/al01.ard/SP_al01_ard3f5.binl
-# - name: remastered/al01.ard/SP_al01_ard4.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al01.ard/SP_al01_ard4.evdl
-# - name: remastered/al01.ard/SP_al01_ard401.binl
-#   method: copy
-#   source:
-#   - name: remastered/al01.ard/SP_al01_ard401.binl
-# - name: remastered/al01.ard/SP_al01_ard5.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al01.ard/SP_al01_ard5.evdl
-# - name: remastered/al01.ard/SP_al01_ardc.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al01.ard/SP_al01_ardc.evdl
-# - name: remastered/al01.ard/SP_al01_ardd.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al01.ard/SP_al01_ardd.evdl
-# - name: remastered/al02.ard/SP_al02_ard0.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_ard0.evdl
-# - name: remastered/al02.ard/SP_al02_ard10.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_ard10.evdl
-# - name: remastered/al02.ard/SP_al02_ard19.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_ard19.evdl
-# - name: remastered/al02.ard/SP_al02_ard2.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_ard2.evdl
-# - name: remastered/al02.ard/SP_al02_ard3.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_ard3.evdl
-# - name: remastered/al02.ard/SP_al02_ard3e8.binl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_ard3e8.binl
-# - name: remastered/al02.ard/SP_al02_ard3ea.binl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_ard3ea.binl
-# - name: remastered/al02.ard/SP_al02_ard3eb.binl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_ard3eb.binl
-# - name: remastered/al02.ard/SP_al02_ard3ec.binl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_ard3ec.binl
-# - name: remastered/al02.ard/SP_al02_ard3f4.binl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_ard3f4.binl
-# - name: remastered/al02.ard/SP_al02_ard3f6.binl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_ard3f6.binl
-# - name: remastered/al02.ard/SP_al02_ard3f7.binl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_ard3f7.binl
-# - name: remastered/al02.ard/SP_al02_ard3f8.binl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_ard3f8.binl
-# - name: remastered/al02.ard/SP_al02_ard4.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_ard4.evdl
-# - name: remastered/al02.ard/SP_al02_ard401.binl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_ard401.binl
-# - name: remastered/al02.ard/SP_al02_ardc.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_ardc.evdl
-# - name: remastered/al02.ard/SP_al02_arde.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_arde.evdl
-# - name: remastered/al02.ard/SP_al02_ardf.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al02.ard/SP_al02_ardf.evdl
-# - name: remastered/al03.ard/SP_al03_ard0.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al03.ard/SP_al03_ard0.evdl
-# - name: remastered/al03.ard/SP_al03_ard10.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al03.ard/SP_al03_ard10.evdl
-# - name: remastered/al03.ard/SP_al03_ard19.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al03.ard/SP_al03_ard19.evdl
-# - name: remastered/al03.ard/SP_al03_ard3e8.binl
-#   method: copy
-#   source:
-#   - name: remastered/al03.ard/SP_al03_ard3e8.binl
-# - name: remastered/al03.ard/SP_al03_ard3f4.binl
-#   method: copy
-#   source:
-#   - name: remastered/al03.ard/SP_al03_ard3f4.binl
-# - name: remastered/al03.ard/SP_al03_ard3f5.binl
-#   method: copy
-#   source:
-#   - name: remastered/al03.ard/SP_al03_ard3f5.binl
-# - name: remastered/al03.ard/SP_al03_ard3f6.binl
-#   method: copy
-#   source:
-#   - name: remastered/al03.ard/SP_al03_ard3f6.binl
-# - name: remastered/al03.ard/SP_al03_ard3f7.binl
-#   method: copy
-#   source:
-#   - name: remastered/al03.ard/SP_al03_ard3f7.binl
-# - name: remastered/al03.ard/SP_al03_ard3f8.binl
-#   method: copy
-#   source:
-#   - name: remastered/al03.ard/SP_al03_ard3f8.binl
-# - name: remastered/al03.ard/SP_al03_ard401.binl
-#   method: copy
-#   source:
-#   - name: remastered/al03.ard/SP_al03_ard401.binl
-# - name: remastered/al03.ard/SP_al03_ardc.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al03.ard/SP_al03_ardc.evdl
-# - name: remastered/al03.ard/SP_al03_ardd.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al03.ard/SP_al03_ardd.evdl
-# - name: remastered/al03.ard/SP_al03_arde.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al03.ard/SP_al03_arde.evdl
-# - name: remastered/al03.ard/SP_al03_ardf.evdl
-#   method: copy
-#   source:
-#   - name: remastered/al03.ard/SP_al03_ardf.evdl
+- name: remastered/al01.ard/SP_al01_ard3e8.binl
+  method: copy
+  source:
+  - name: remastered/al01.ard/SP_al01_ard3e8.binl
+- name: remastered/al01.ard/SP_al01_ard3eb.binl
+  method: copy
+  source:
+  - name: remastered/al01.ard/SP_al01_ard3eb.binl
+- name: remastered/al01.ard/SP_al01_ard3ec.binl
+  method: copy
+  source:
+  - name: remastered/al01.ard/SP_al01_ard3ec.binl
+- name: remastered/al01.ard/SP_al01_ard3ed.binl
+  method: copy
+  source:
+  - name: remastered/al01.ard/SP_al01_ard3ed.binl
+- name: remastered/al01.ard/SP_al01_ard3f5.binl
+  method: copy
+  source:
+  - name: remastered/al01.ard/SP_al01_ard3f5.binl
+- name: remastered/al02.ard/SP_al02_ard3ea.binl
+  method: copy
+  source:
+  - name: remastered/al02.ard/SP_al02_ard3ea.binl
 - name: remastered/al04.ard/SP_al04_ard3ea.binl
   method: copy
   source:
