--- a/mod.yml
+++ b/mod.yml
@@ -1,6 +1,6 @@
 title: KH1SpanishMix
 originalAuthor: You
-description: Generated on Thu, 29 May 2025 14:34:24 GMT
+description: Generated on Fri, 30 May 2025 16:08:28 GMT
 dependencies: 
 assets:
 - name: remastered/al01.ard/SP_al01_ard3e8.binl
@@ -835,6 +835,42 @@ assets:
   method: copy
   source:
   - name: remastered/pi02.ard/SP_pi02_ard3f4.binl
+- name: remastered/pi06.ard/SP_pi06_ard3e8.binl
+  method: copy
+  source:
+  - name: remastered/pi06.ard/SP_pi06_ard3e8.binl
+- name: remastered/pi06.ard/SP_pi06_ard3ea.binl
+  method: copy
+  source:
+  - name: remastered/pi06.ard/SP_pi06_ard3ea.binl
+- name: remastered/pi06.ard/SP_pi06_ard3f4.binl
+  method: copy
+  source:
+  - name: remastered/pi06.ard/SP_pi06_ard3f4.binl
+- name: remastered/pi09.ard/SP_pi09_ard3e8.binl
+  method: copy
+  source:
+  - name: remastered/pi09.ard/SP_pi09_ard3e8.binl
+- name: remastered/pi09.ard/SP_pi09_ard3ea.binl
+  method: copy
+  source:
+  - name: remastered/pi09.ard/SP_pi09_ard3ea.binl
+- name: remastered/pi09.ard/SP_pi09_ard3f4.binl
+  method: copy
+  source:
+  - name: remastered/pi09.ard/SP_pi09_ard3f4.binl
+- name: remastered/pi14.ard/SP_pi14_ard3e8.binl
+  method: copy
+  source:
+  - name: remastered/pi14.ard/SP_pi14_ard3e8.binl
+- name: remastered/pi14.ard/SP_pi14_ard3ea.binl
+  method: copy
+  source:
+  - name: remastered/pi14.ard/SP_pi14_ard3ea.binl
+- name: remastered/pi14.ard/SP_pi14_ard3f4.binl
+  method: copy
+  source:
+  - name: remastered/pi14.ard/SP_pi14_ard3f4.binl
 - name: remastered/po.wdt/-54f0.dds
   method: copy
   source:
